Fix titles add banner fix align description

--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -380,3 +380,13 @@ ul.checks {
 .tooltip:hover .tooltiptext {
   visibility: visible;
 }
+.video-count{
+font-size: 3em;
+color: #afadad;
+font-family: monospace;
+margin-left: 50%;
+}
+
+.landing-description{
+padding-right: 45px;
+}
